[gd_scene load_steps=12 format=3 uid="uid://ckcwvp8sgrwrf"]

[ext_resource type="Script" path="res://main.gd" id="1_paoot"]
[ext_resource type="PackedScene" uid="uid://bljahqygaqrf1" path="res://player.tscn" id="1_pnrhf"]
[ext_resource type="PackedScene" uid="uid://dtm0f4a4jqc32" path="res://mob.tscn" id="2_f28e1"]
[ext_resource type="Texture2D" uid="uid://by4efpyeqjphr" path="res://inicio/loscaboselarco.jpg" id="3_jwtvf"]
[ext_resource type="Texture2D" uid="uid://d1bl4wgu6ru0x" path="res://vallemexicoJoseMaVElaszo.jpg" id="3_xiket"]
[ext_resource type="PackedScene" uid="uid://b75kbaf74n018" path="res://hud.tscn" id="4_1awnx"]
[ext_resource type="Texture2D" uid="uid://cf4k50xwd3qmc" path="res://saturn1.webp" id="5_2cuxy"]
[ext_resource type="Texture2D" uid="uid://cn1chpm7k4neu" path="res://inicio/BackgroundEraser_20240630_182536810.png" id="6_xtpap"]
[ext_resource type="Texture2D" uid="uid://bkte7yve875ms" path="res://Logo1.png" id="7_e2ed3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fmyha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jwtvf")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2cuxy")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_xiket")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_xtpap")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_e2ed3")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}]

[sub_resource type="Curve2D" id="Curve2D_r8crf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2, -4, 0, 0, 0, 0, 477, 1, 0, 0, 0, 0, 481, 714, 0, 0, 0, 0, -9, 719, 0, 0, 0, 0, -2, -4)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_paoot")
mob_scene = ExtResource("2_f28e1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(236, 356)
scale = Vector2(0.279167, 0.718518)
sprite_frames = SubResource("SpriteFrames_fmyha")
animation = &"1"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8, -4)
scale = Vector2(1.65333, 1.448)
texture = ExtResource("3_xiket")
centered = false

[node name="Player" parent="." instance=ExtResource("1_pnrhf")]
position = Vector2(249, 397)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Startposition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_r8crf")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
texture_filter = 1
position = Vector2(-2, -4)
rotation = 0.010438

[node name="HUD" parent="." instance=ExtResource("4_1awnx")]

[connection signal="body_entered" from="Player" to="Player" method="_on_body_entered"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
